--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -24,8 +24,21 @@
           <span><%= weather.weather_date.strftime("%A %B %-d, %Y") %></span>
         </div>
         <div class="pure-u-1 pure-u-md-1-3">
-          <span class="post-category pull-right break-pull-mobile"><%= weather.description %></span>
-          <span class="post-category post-category-design pull-right break-pull-mobile"><%= weather.high %>&deg; / <%= weather.low %>&deg;</span>
+          <% weather_types = [{css: 'clear', keyword: ['clear']},
+                              {css: 'rain', keyword: ['rain', 'drizzle']},
+                              {css: 'snow', keyword: ['snow', 'sleet']},
+                              {css: 'clouds', keyword: ['clouds']},
+                              {css: 'extreme', keyword: ['thunderstorm', 'tornado', 'hurricane', 'tropical storm', 'hail', 'storm']},
+                              {css: 'fog', keyword: ['fog', 'smoke', 'haze', 'mist']}]
+            weather_type = nil
+            weather_types.each do |weather_hash|
+              weather_type = weather_hash[:css] if weather_hash[:keyword].any? {|keyword| weather.description.include?(keyword)}
+              break if weather_type.present?
+            end
+            weather_type = weather_type.present? ? weather_type : 'default' %>
+            <%= loops %>
+          <span class="post-category post-category-<%= weather_type %> pull-right break-pull-mobile"><%= weather.description %></span>
+          <span class="post-category post-category-temp pull-right break-pull-mobile"><%= weather.high %>&deg; / <%= weather.low %>&deg;</span>
         </div>
         <div class="clear-fix"></div>
       </div>
@@ -34,7 +47,7 @@
       <tr class="tr-header">
         <th>Time</th>
         <th>Temp (&deg;F)</th>
-        <th>Description</th>
+        <th>Conditions</th>
         <th>Wind</th>
       </tr>
       <% if hourly_weather.empty? %>
