Change name of website.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FastAtWeather</title>
+    <title>AT Forecast</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
@@ -11,7 +11,7 @@
     <div id="layout" class="pure-g">
       <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="header">
-          <h1 class="brand-title"><%= link_to('Fast AT Weather', root_path) %></h1>
+          <h1 class="brand-title"><%= link_to('AT Forecast', root_path) %></h1>
           <%= yield :sidebar %>
         </div>
       </div>
