--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :sidebar do %>
   <p class="brand-tagline">
-    The fast, free and <a href="https://github.com/Green-Squad/Fast-AT-Weather">open source</a> solution for weather on the trail.
+    The fast, free and <a href="https://github.com/Green-Squad/Fast-AT-Weather">open source</a> solution for weather on the Appalachian Trail.
   </p>
 <% end %>
 <h2 class="content-subhead">Find Shelter by mile.</h2>
