Increase GPS timeout and disable high accuracy.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,8 +87,8 @@
   gpsButton.addEventListener('click', function() {
     gpsButton.innerHTML = 'Loading...';
     var options = {
-      enableHighAccuracy: true,
-      timeout: 5000,
+      enableHighAccuracy: false,
+      timeout: 15000,
       maximumAge: 0
     };
 
