Add next/previous buttons to the top.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -60,6 +60,9 @@ a:hover {
 .clickable-shelter:hover {
   cursor: pointer;
 }
+.top-next-previous {
+  margin: 0 0 15px 0;
+}
 .pure-table-striped {
   margin: 20px 0;
 }
