Add about page for site, contact, and adjusted temp info. Modified some styling. Added navigation to sidebar.

--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -81,8 +81,11 @@ h3 {
 }
 .nav-item a:hover,
 .nav-item a:focus {
-    border: 2px solid rgb(61, 146, 201);
+  /*  border: 2px solid rgb(61, 146, 201); */
     text-decoration: none;
+    border: 2px solid #fff;
+    background: #fff;
+    color: #2980b9;
 }
 
 .content-subhead {
