--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<a href="https://goo.gl/uaRHtn" class="alert alert-info" style="display: block;"><strong>Android app available.</strong> Download from the play store.</a>
+<a href="https://goo.gl/uaRHtn" class="alert alert-info" style="display: block;"><strong>Android app available.</strong> Download from the Google Play Store.</a>
 
 <h2 class="content-subhead">Find Shelter by mile.</h2>
 <form id="mile-search-form" onsubmit="return nearestShelter();" action="#" accept-charset="UTF-8" method="post" class="pure-form pure-g">
