Stop using method for temp/elevation conversion since it seems that our weather api provider provides us with lower than average temps already. Update some information on the about page.

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,9 +6,9 @@
     <h2 class="content-subhead">Why did we make this?</h2>
     <p>Our goal with this project is to have the fastest and easiest to use weather service available for hikers on the Appalachian Trail. Many places on the trail have spotty cell service, so we wanted to make the pages load as fast as possible when you have that bad service connection. </p>
 
-    <h2 id="adjusted-temp" class="content-subhead">How do we adjust temperature for elevation?</h2>
-    <p>As you may have noticed on your hikes, the mountain tops are colder than the valleys. Every 1,000 feet in elevation gain, the temperature decreases around an average of 3.5&deg;F. You can read more about this <a href="https://en.wikipedia.org/wiki/Lapse_rate#Environmental_lapse_rate" target="_blank">here</a>.</p>
-    <p>We are able to calculate this difference in elevation based on the elevation at the shelter minus the elevation where the weather station is located.</p>
+    <h2 id="adjusted-temp" class="content-subhead">Temperature and elevation?</h2>
+    <p>As you may have noticed on your hikes, the mountain tops are colder than the valleys. Every 1,000 feet in elevation gain, the temperature decreases around an average of 3.5&deg;F to 5&deg;F. You can read more about this <a href="https://en.wikipedia.org/wiki/Lapse_rate#Environmental_lapse_rate" target="_blank">here</a>.</p>
+    <p>Be sure to keep this in mind when planning out your trip, especially when you wish to camp at higher elevations.</p>
 
     <h2 class="content-subhead">How can you contribute?</h2>
     <p>ATForecast.com is <a href="https://github.com/Green-Squad/AT-Forecast" target="_blank">open source on GitHub</a>, so feel free to contribute if you know how to code.</p>
